--- a/config/realworld/label_real_kitchen_dataset.yaml
+++ b/config/realworld/label_real_kitchen_dataset.yaml
@@ -1,12 +1,12 @@
-base_dev_dir: null
+base_dev_dir: '/home/alien/Research/'
 
 hydra:
   run:
     dir: '${base_dev_dir}/xskill/experiment/label_real_kitchen/${now:%Y-%m-%d_%H-%M-%S}'
 
-exp_path: null
+exp_path: '/home/alien/Research/xskill/experiment/pretrain/2025-06-30_20-05-14'
 save_path: ${exp_path}
-ckpt: 299
+ckpt: 19
 device: 'cuda:0'
 
 
